--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,4 +4,12 @@
 @use 'utils';
 @use 'globals';
 
-//58:13
+@use 'blocks/icon';
+@use 'blocks/logo';
+@use 'blocks/button';
+@use 'blocks/burger-button';
+@use 'blocks/header';
+@use 'blocks/badge';
+@use 'blocks/soc1als';
+@use 'blocks/footer';
+
