--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,8 +27,8 @@
 @use 'blocks/blog-actions';
 @use 'blocks/blog-card';
 
-/* .header,
+.header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
-} */
+}
