feat: section resources

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -81,6 +81,13 @@ svg * {
   transition-duration: var(--transition-duration);
 }
 
+a,
+button {
+  @include hover {
+    transform: scale(1.05);
+  }
+}
+
 a {
   color: inherit;
 
