--- a/styles/main.css
+++ b/styles/main.css
@@ -401,6 +401,19 @@ svg * {
   transition-duration: var(--transition-duration);
 }
 
+@media (any-hover: hover) {
+  a:hover,
+  button:hover {
+    transform: scale(1.05);
+  }
+}
+@media (any-hover: none) {
+  a:active,
+  button:active {
+    transform: scale(1.05);
+  }
+}
+
 a {
   color: inherit;
 }
@@ -462,6 +475,9 @@ button[aria-label]::before {
 .icon--yellow-arrow::after {
   background-image: url("../../icons/arrow-top-right_yellow.svg");
 }
+.icon--yellow-eye::after {
+  background-image: url("../../icons/eye_yellow.svg");
+}
 
 .logo {
   max-width: clamp(7.875rem, 7.0306372549rem + 3.4640522876vw, 11.1875rem);
@@ -505,6 +521,9 @@ button[aria-label]::before {
   background-color: var(--color-accent);
   border-color: var(--color-accent);
   border-radius: 0.5rem;
+}
+.button--dark-gray {
+  background-color: var(--color-dark-10);
 }
 
 .burger-button {
@@ -1162,6 +1181,11 @@ button[aria-label]::before {
   display: grid;
   row-gap: clamp(1.25rem, 0.7720588235rem + 1.9607843137vw, 3.125rem);
 }
+@media (width <= 63.99875rem) {
+  .card__preview-main {
+    justify-content: start;
+  }
+}
 .card__preview-icon {
   width: clamp(3.125rem, 2.6470588235rem + 1.9607843137vw, 5rem);
 }
@@ -1174,7 +1198,7 @@ button[aria-label]::before {
 }
 @media (width <= 63.99875rem) {
   .card__body {
-    padding: 1.875rem 1rem;
+    padding: 1.875rem 0;
   }
 }
 .card__grid {
@@ -1185,8 +1209,21 @@ button[aria-label]::before {
   gap: clamp(0.625rem, 0.306372549rem + 1.3071895425vw, 1.875rem);
 }
 @media (width <= 47.99875rem) {
-  .card__grid {
+  .card__grid--2-cols {
     grid-template-columns: 1fr;
+  }
+}
+.card__grid--2-cols-alt {
+  gap: 1.875rem 1.25rem;
+}
+@media (width <= 90.06125rem) {
+  .card__grid--2-cols-alt {
+    gap: 1.5rem 1rem;
+  }
+}
+@media (width > 47.99875rem) {
+  .card__grid--2-cols-alt {
+    grid-template-columns: auto 1fr;
   }
 }
 .card__cell {
@@ -1195,8 +1232,36 @@ button[aria-label]::before {
   justify-content: start;
   row-gap: clamp(0.25rem, -0.0049019608rem + 1.045751634vw, 1.25rem);
 }
-.card__cell-description {
-  color: var(--color-gray-60);
+.card__cell:has(> *:only-child) {
+  justify-content: center;
+}
+.card__cell:has(.card__cell-link) {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-areas: "other link" "other link";
+  align-items: center;
+  column-gap: 1.25rem;
+}
+.card__cell--wide {
+  grid-column: -1/1;
+}
+.card__cell-image {
+  width: 100%;
+  height: clamp(10.5625rem, 7.9656862745rem + 10.6535947712vw, 20.75rem);
+  object-fit: cover;
+  border-radius: 0.75rem;
+}
+@media (width <= 90.06125rem) {
+  .card__cell-image {
+    border-radius: 0.625rem;
+  }
+}
+.card__cell-subtitle {
+  font: inherit;
+  color: inherit;
+}
+.card__cell-link {
+  grid-area: link;
 }
 
 .tabs__header {
@@ -1392,10 +1457,34 @@ button[aria-label]::before {
   }
 }
 
+.download-info {
+  display: inline-grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+  column-gap: 3.125rem;
+}
+@media (width <= 90.06125rem) {
+  .download-info {
+    column-gap: 1.875rem;
+  }
+}
+.download-info__team {
+  --personImageSize: 3.125rem;
+  background-color: var(--color-dark);
+  border-radius: 0.75rem;
+}
+@media (width <= 90.06125rem) {
+  .download-info__team {
+    --personImageSize: 2.5rem;
+  }
+}
+
+/*
 .header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
 }
+*/
 
 /*# sourceMappingURL=main.css.map */
