--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,9 +26,12 @@
 @use 'blocks/person-card';
 @use 'blocks/blog-actions';
 @use 'blocks/blog-card';
+@use 'blocks/download-info';
 
+/*
 .header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
 }
+*/
