--- a/styles/main.css
+++ b/styles/main.css
@@ -401,19 +401,6 @@ svg * {
   transition-duration: var(--transition-duration);
 }
 
-@media (any-hover: hover) {
-  a:hover,
-  button:hover {
-    transform: scale(1.05);
-  }
-}
-@media (any-hover: none) {
-  a:active,
-  button:active {
-    transform: scale(1.05);
-  }
-}
-
 a {
   color: inherit;
 }
@@ -1479,12 +1466,10 @@ button[aria-label]::before {
   }
 }
 
-/*
-.header,
+/*.header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
-}
-*/
+}*/
 
 /*# sourceMappingURL=main.css.map */
