feat: section reviews

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -31,8 +31,8 @@
 @use 'blocks/rating-view';
 @use 'blocks/review-card';
 
-/*.header,
+.header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
-}*/
+}
