--- a/styles/main.scss
+++ b/styles/main.scss
@@ -33,8 +33,9 @@
 @use 'blocks/about-card';
 @use 'blocks/about';
 
+/*
 .header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
-}
+}*/
