feat: section news-tabs

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -37,8 +37,9 @@
 @use 'blocks/news-card';
 @use 'blocks/news';
 
+/*
 .header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
-}
+}*/
