feat: page news

--- a/styles/blocks/_badge.scss
+++ b/styles/blocks/_badge.scss
@@ -6,9 +6,8 @@
   font-size: rem(16);
   color: var(--color-light);
   border: rem(1) solid transparent;
-  background: 
-    linear-gradient(var(--color-dark-10), var(--color-dark-10)) padding-box, 
-    var(--gradient) border-box;
+  background: linear-gradient(var(--color-dark-10), var(--color-dark-10)) padding-box,
+  var(--gradient) border-box;
   border-radius: rem(6);
 
   @include laptop {
