--- a/styles/blocks/_hero.scss
+++ b/styles/blocks/_hero.scss
@@ -1,4 +1,3 @@
-
 @use '../helpers' as *;
 
 .hero {
@@ -75,8 +74,7 @@
     grid-area: resources-preview;
     padding-left: rem(80);
     padding-bottom: rem(80);
-    background:
-      url('../../images/resources-preview/bg.png') 0 0/cover no-repeat;
+    background: url('../../images/resources-preview/bg.png') 0 0/cover no-repeat;
 
     @include laptop {
       padding-left: rem(50);
