--- a/styles/main.css
+++ b/styles/main.css
@@ -253,9 +253,9 @@ svg * {
   --color-accent: #FFD11A;
   --color-red: #FF5500;
   --gradient: linear-gradient(
-    45deg,
-    var(--color-dark-15) 64%,
-    var(--color-accent) 136%
+      45deg,
+      var(--color-dark-15) 64%,
+      var(--color-accent) 136%
   );
   --border: 0.0625rem solid var(--color-dark-15);
   --font-family-base: "Inter", sans-serif;
@@ -1122,6 +1122,9 @@ button[aria-label]::before {
 .section__body {
   border-block: var(--border);
 }
+.section__link {
+  max-width: 22.5rem;
+}
 
 .list__item:not(:last-child) {
   border-bottom: var(--border);
@@ -1480,9 +1483,45 @@ button[aria-label]::before {
   --itemPaddingY: clamp(2.5rem, 1.862745098rem + 2.614379085vw, 5rem);
   display: grid;
   grid-template-columns: repeat(var(--columns), 1fr);
+  overflow-x: hidden;
 }
 .bordered-grid--2-cols {
   --columns: 2;
+  --itemPaddingX: 5rem;
+}
+@media (width <= 90.06125rem) {
+  .bordered-grid--2-cols {
+    --itemPaddingX: 3.125rem;
+  }
+}
+@media (width > 47.99875rem) {
+  .bordered-grid--2-cols .bordered-grid__item:nth-child(odd) {
+    padding-right: var(--itemPaddingX);
+    border-right: var(--border);
+  }
+  .bordered-grid--2-cols .bordered-grid__item:nth-child(even) {
+    position: relative;
+    padding-left: var(--itemPaddingX);
+  }
+  .bordered-grid--2-cols .bordered-grid__item:nth-child(even)::before {
+    content: "";
+    position: absolute;
+    left: auto;
+    right: 100%;
+    bottom: 0;
+    translate: 50%;
+    width: 100vw;
+    height: 0.0625rem;
+    background-color: var(--color-dark-15);
+  }
+}
+@media (width <= 47.99875rem) {
+  .bordered-grid--2-cols {
+    --columns: 1;
+  }
+  .bordered-grid--2-cols .bordered-grid__item:not(:last-child) {
+    border-bottom: var(--border);
+  }
 }
 .bordered-grid--3-cols {
   --columns: 3;
@@ -1516,11 +1555,12 @@ button[aria-label]::before {
     position: relative;
   }
   .bordered-grid--3-cols .bordered-grid__item:nth-child(3n-1)::before {
+    content: "";
     position: absolute;
     left: 50%;
-    translate: -50%;
-    content: "";
+    right: auto;
     bottom: 0;
+    translate: -50%;
     width: 100vw;
     height: 0.0625rem;
     background-color: var(--color-dark-15);
@@ -1844,10 +1884,90 @@ button[aria-label]::before {
   gap: 1.875rem;
 }
 
+.video-player {
+  position: relative;
+}
+.video-player__video {
+  width: 100%;
+  height: clamp(13.125rem, 9.9068627451rem + 13.2026143791vw, 25.75rem);
+  object-fit: cover;
+  border-radius: 0.75rem;
+}
+@media (width <= 90.06125rem) {
+  .video-player__video {
+    border-radius: 0.625rem;
+  }
+}
+.video-player__panel {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  column-gap: 1rem;
+  padding: 1.875rem;
+  transition-duration: var(--transition-duration);
+}
+.video-player__panel:not(.is-active) {
+  opacity: 0;
+  visibility: hidden;
+}
+.video-player__panel::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: linear-gradient(180deg, rgba(20, 20, 20, 0) 44.27%, #141414 100%);
+}
+.video-player__panel * {
+  position: relative;
+}
+.video-player__play-button {
+  --size: 4.375rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: var(--size);
+  height: var(--size);
+  padding: 0;
+  color: var(--color-light);
+  background-color: transparent;
+  border: none;
+}
+@media (any-hover: hover) {
+  .video-player__play-button:hover {
+    color: var(--color-accent);
+  }
+}
+@media (any-hover: none) {
+  .video-player__play-button:active {
+    color: var(--color-accent);
+  }
+}
+@media (width <= 90.06125rem) {
+  .video-player__play-button {
+    --size: 3.125rem;
+  }
+}
+
+.video-card {
+  display: grid;
+  row-gap: 1.875rem;
+}
+@media (width <= 90.06125rem) {
+  .video-card {
+    row-gap: 1.25rem;
+  }
+}
+.video-card__body {
+  display: grid;
+  row-gap: clamp(0.25rem, 0.1544117647rem + 0.3921568627vw, 0.625rem);
+}
+
+/*
 .header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
-}
+}*/
 
 /*# sourceMappingURL=main.css.map */
