Create html section blog-details

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -39,8 +39,7 @@
 @use 'blocks/video-player';
 @use 'blocks/video-card';
 
-/*
-.header,
+/*.header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
