--- a/styles/main.css
+++ b/styles/main.css
@@ -1963,8 +1963,7 @@ button[aria-label]::before {
   row-gap: clamp(0.25rem, 0.1544117647rem + 0.3921568627vw, 0.625rem);
 }
 
-/*
-.header,
+/*.header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
