--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,7 @@
 @use 'utils';
 @use 'globals';
 
+@use 'blocks/expandable-content';
 @use 'blocks/icon';
 @use 'blocks/logo';
 @use 'blocks/button';
@@ -38,6 +39,8 @@
 @use 'blocks/news';
 @use 'blocks/video-player';
 @use 'blocks/video-card';
+@use 'blocks/table-of-contents';
+@use 'blocks/blog-details';
 
 /*.header,
 main > *:not(:last-child),
