--- a/styles/main.scss
+++ b/styles/main.scss
@@ -42,8 +42,17 @@
 @use 'blocks/table-of-contents';
 @use 'blocks/blog-details';
 @use 'blocks/report-card';
+@use 'blocks/contacts-card';
+@use 'blocks/field';
+@use 'blocks/select';
+@use 'blocks/checkbox';
+@use 'blocks/feedback-form';
+@use 'blocks/accordion';
+@use 'blocks/accordion-group';
+@use 'blocks/contacts';
 
-/*.header,
+/*
+.header,
 main > *:not(:last-child),
 .footer {
   display: none !important;
