--- a/styles/main.scss
+++ b/styles/main.scss
@@ -51,9 +51,8 @@
 @use 'blocks/accordion-group';
 @use 'blocks/contacts';
 
-/*
 .header,
 main > *:not(:last-child),
 .footer {
-  display: none !important;
-}*/
+//  display: none !important;
+}
