--- a/styles/blocks/_select.scss
+++ b/styles/blocks/_select.scss
@@ -2,8 +2,10 @@
 
 .select {
   &__original-control {
+    min-width: rem(100);
+
     @include mobile-above {
-//      @include visually-hidden;
+      @include visually-hidden;
     }
   }
 
