--- a/styles/blocks/_feedback-form.scss
+++ b/styles/blocks/_feedback-form.scss
@@ -2,7 +2,7 @@
 
 .feedback-form {
   display: grid;
-  gap: fluid(50, 20) 50px;
+  gap: fluid(50, 20) rem(50);
 
   @include mobile-s-above {
     grid-template-columns: repeat(2, 1fr);
