--- a/styles/_normalize.scss
+++ b/styles/_normalize.scss
@@ -10,7 +10,7 @@
 /**
   Убираем внутренние отступы слева тегам списков,
   у которых есть атрибут class
-*/
+ */
 :where(ul, ol):where([class]) {
   padding-left: 0;
 }
@@ -18,7 +18,7 @@
 /**
   Убираем внешние отступы body и двум другим тегам,
   у которых есть атрибут class
-*/
+ */
 body,
 :where(blockquote, figure):where([class]) {
   margin: 0;
@@ -27,7 +27,7 @@ body,
 /**
   Убираем внешние отступы вертикали нужным тегам,
   у которых есть атрибут class
-*/
+ */
 :where(
   h1,
   h2,
@@ -56,7 +56,7 @@ body,
 /**
   Убираем стандартный маркер маркированному списку,
   у которого есть атрибут class
-*/
+ */
 :where(ul[class]) {
   list-style: none;
 }
@@ -69,7 +69,7 @@ body,
   Обнуляем вертикальные внешние отступы параграфа,
   объявляем локальную переменную для внешнего отступа вниз,
   чтобы избежать взаимодействие с более сложным селектором
-*/
+ */
 p {
   --paragraphMarginBottom: 24px;
 
@@ -79,7 +79,7 @@ p {
 /**
   Внешний отступ вниз для параграфа без атрибута class,
   который расположен не последним среди своих соседних элементов
-*/
+ */
 p:where(:not([class]):not(:last-child)) {
   margin-bottom: var(--paragraphMarginBottom);
 }
@@ -87,7 +87,7 @@ p:where(:not([class]):not(:last-child)) {
 
 /**
   Упрощаем работу с изображениями и видео
-*/
+ */
 img,
 video {
   display: block;
@@ -97,7 +97,7 @@ video {
 
 /**
   Наследуем свойства шрифт для полей ввода
-*/
+ */
 input,
 textarea,
 select,
@@ -109,18 +109,18 @@ html {
   /**
     Пригодится в большинстве ситуаций
     (когда, например, нужно будет "прижать" футер к низу сайта)
-  */
+   */
   height: 100%;
   /**
     Убираем скачок интерфейса по горизонтали
     при появлении / исчезновении скроллбара
-  */
+   */
   scrollbar-gutter: stable;
 }
 
 /**
   Плавный скролл
-*/
+ */
 html,
 :has(:target) {
   scroll-behavior: smooth;
@@ -130,24 +130,24 @@ body {
   /**
     Пригодится в большинстве ситуаций
     (когда, например, нужно будет "прижать" футер к низу сайта)
-  */
+   */
   min-height: 100%;
   /**
     Унифицированный интерлиньяж
-  */
+   */
   line-height: 1.5;
 }
 
 /**
   Нормализация высоты элемента ссылки при его инспектировании в DevTools
-*/
+ */
 a:where([class]) {
   display: inline-flex;
 }
 
 /**
   Курсор-рука при наведении на элемент
-*/
+ */
 button,
 label {
   cursor: pointer;
@@ -155,47 +155,21 @@ label {
 
 /**
   Приводим к единому цвету svg-элементы
-  (за исключением тех, у которых уже указан
-  атрибут fill со значением 'none' или начинается с 'url')
-*/
-:where([fill]:not(
-  [fill="none"],
-  [fill^="url"]
-)) {
-  fill: currentColor;
-}
-
-/**
-  Приводим к единому цвету svg-элементы
-  (за исключением тех, у которых уже указан
-  атрибут stroke со значением 'none')
-*/
-:where([stroke]:not(
-  [stroke="none"],
-  [stroke^="url"]
-)) {
-  stroke: currentColor;
-}
+ */
+[fill] { fill: currentColor }
+[stroke] { stroke: currentColor }
 
 /**
   Чиним баг задержки смены цвета при взаимодействии с svg-элементами
-*/
+ */
 svg * {
   transition-property: fill, stroke;
 }
 
 /**
-  Приведение рамок таблиц в классический 'collapse' вид
-*/
-:where(table) {
-  border-collapse: collapse;
-  border-color: currentColor;
-}
-
-/**
   Удаляем все анимации и переходы для людей,
   которые предпочитают их не использовать
-*/
+ */
 @media (prefers-reduced-motion: reduce) {
   *,
   ::before,
