--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -29,7 +29,7 @@
   &::after {
     position: absolute;
     width: calc(
-      (100vw - var(--container-width)) / 2
+      (var(--100vw) - var(--container-width)) / 2
     );
     height: rem(1);
     background-color: var(--color-dark-15);
@@ -87,7 +87,9 @@
 
     content: '';
     right: 0;
-    background: url('../../icons/arrow-top-right_black.svg') center no-repeat var(--color-accent);
+    background:
+      url('../../icons/arrow-top-right_black.svg') center no-repeat
+      var(--color-accent);
     border-radius: 50%;
   }
 }
