--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -16,9 +16,9 @@
   --color-red: #FF5500;
 
   --gradient: linear-gradient(
-      45deg,
-      var(--color-dark-15) 64%,
-      var(--color-accent) 136%
+    45deg,
+    var(--color-dark-15) 64%,
+    var(--color-accent) 136%
   );
 
   --border: #{rem(1)} solid var(--color-dark-15);
@@ -32,6 +32,8 @@
   --container-padding-x: #{rem(16)};
 
   --transition-duration: 0.2s;
+
+  --100vw: calc(100vw - var(--scrollbar-width));
 
   @include laptop {
     --container-width: #{rem(1280)};
