--- a/styles/blocks/_expandable-content.scss
+++ b/styles/blocks/_expandable-content.scss
@@ -24,8 +24,9 @@
     left: 0;
     width: 100%;
     height: 30%;
-    background-image:
-      linear-gradient(180deg, rgba(20, 20, 20, 0)0%,
+    background-image: linear-gradient(
+      180deg,
+      rgba(20, 20, 20, 0) 0%,
       #141414 77.38%
     );
     pointer-events: none;
